home page alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1302,7 +1302,7 @@ a.active {
     }
 
     .hero-body h1 {
-        font-size: 71%;
+        font-size: 67%;
         line-height: 180%;
     }
     .hero-body .discription p {
@@ -1331,6 +1331,7 @@ a.active {
     .card-body {
         width: 100%;
         height: 300px;
+        margin-top: 2rem;
     }
 
     .card-body .contant {
@@ -1370,7 +1371,7 @@ a.active {
     }
 
     .Unlock-Exclusive {
-        margin-top: 69rem;
+        margin-top: 74rem;
         display: block;
         height: 1172px;
         width: 90%;
